# html2pdf-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  instruction.md  pyproject.toml  request.json  requirements.txt  test.html
app/: __init__.py  main.py
app/api/v1/endpoints/: canva.py  monitor.py  pdf.py
app/core/: celery_app.py  config.py  security.py
app/models/: pdf_options.py
app/services/: canva_service.py  pdf_service.py
app/templates/: login.html  monitor.html
static/canva/KM/: canva-KM.html
static/canva/string/: canva-string.html
static/canva/test/: canva-test.html  style-test.css
