[tool.poetry]
name = "html2pdf-fastapi"
version = "0.1.0"
description = "Service to generate HTML to PDF"
authors = ["Ahmad M. Huda <anotherhuda@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
selenium = "^4.27.1"
python-multipart = "^0.0.20"
webdriver-manager = "^4.0.2"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3
